@@ -10,16 +10,15 @@ JVM 通过 *垃圾收集-GC* 自动管理内存堆中对象内存的分配和回
 
 - **如何判断对象可被回收**，判断策略：
 
- - *Tracing GC*，跟踪收集，也叫**可达性分析算法**，其思想是从某些**根对象引用(GC roots)**出发总能找到一个到一组存活对象的引用链。
- - *Reference counting*，**引用计数法**，不能解决循环引用。
- - *Escape analysis*，**逃逸分析**，可以将堆分配转为栈分配，动态编译优化手段，减轻GC压力。
-
+    - *Tracing GC*，跟踪收集，也叫**可达性分析算法**，其思想是从某些**根对象引用(GC roots)**出发总能找到一个到一组存活对象的引用链。
+    - *Reference counting*，**引用计数法**，不能解决循环引用。
+    - *Escape analysis*，**逃逸分析**，可以将堆分配转为栈分配，动态编译优化手段，减轻GC压力。
 
 - **采用何种方式进行回收**，垃圾收集算法：
 
- - *Copying*，复制，将存活对象从一块内存复制到另一块内存，不产生内存碎片，由于要保留一个空的备份内存，所以空间利用率较低。
- - *Mark-Sweep*，标记清理，从GC roots出发标记所有存活对象，然后清理所有未标记的对象，会产生内存碎片。
- - *Mark-Compact*，标记整理，标记清除后，会压缩内存，避免内存碎片。
+    - *Copying*，复制，将存活对象从一块内存复制到另一块内存，不产生内存碎片，由于要保留一个空的备份内存，所以空间利用率较低。
+    - *Mark-Sweep*，标记清理，从GC roots出发标记所有存活对象，然后清理所有未标记的对象，会产生内存碎片。
+    - *Mark-Compact*，标记整理，标记清除后，会压缩内存，避免内存碎片。
 
 
 ## 内存分配
@@ -42,54 +41,58 @@ Hotspot JVM 自JDK 6u23开始支持逃逸分析，采用 *Tracing GC* 追踪堆�
 - JNI 本地方法局部变量，参数和JNI 全局引用
 
 
-
 需要注意*GC roots*是一组**对象引用**而不是**引用对象**。
-
 
 
 Hotspot JVM 提供了多个垃圾收集器让分代收集器组合使用：
 
 - **串行收集器**，单个GC线程执行所有垃圾收集工作
-
- - *Serial*，年轻代，使用*复制算法*，*DefNew*
- - *Serial Old*，老年代，使用*标记压缩整理算法*，*Tenured*
+    - *Serial*，年轻代，使用*复制算法*，*DefNew*
+    - *Serial Old*，老年代，使用*标记压缩整理算法*，*Tenured*
 
 - **并行收集器**，吞吐量收集器，多个GC线程加速垃圾回收
-
- - *ParNew*，年轻代，使用*复制算法*，可看做并行的Serial，*ParNew*
- - *Parallel Scavenge*，年轻代，使用*复制算法*，与 ParNew 的区别，它可以动态调节停顿时间和最大吞吐量，*PSYoungGen*
- - *Parallel Old*，老年代，使用*标记压缩整理算法*，通常与*Parallel Scavenge*配合使用，*ParOldGen*
+    - *ParNew*，年轻代，使用*复制算法*，可看做并行的Serial，*ParNew*
+    - *Parallel Scavenge*，年轻代，使用*复制算法*，与 ParNew 的区别，它可以动态调节最大停顿时间和吞吐量，*PSYoungGen*
+    - *Parallel Old*，老年代，使用*标记压缩整理算法*，通常与*Parallel Scavenge*配合使用，*ParOldGen*
 
 - **并发收集器**，看重响应时间而不是吞吐量
-
- - *CMS, Concurrent Mark Sweep*，低停顿，采用*标记清除算法*，会有内存碎片，Java堆空间需求比较大，*CMS*
- - *G1, Garbage-First*，相比CMS，压缩内存，
-
-
+    - *CMS, Concurrent Mark Sweep*，低停顿，采用*标记清除算法*，会有内存碎片，Java堆空间需求比较大，*CMS*
+    - *G1, Garbage-First*，相比CMS，压缩内存，*G1*
 
 常用JVM参数指定GC组合：
-
-- –XX:+UseSerialGC：Serial + Serial Old
-- –XX:+UseParNewGC：ParNew + Serial Old
-- –XX:+UseParallelGC：Parallel Scavenge + Serial Old
-- –XX:+UseParallelOldGC：Parallel Scavenge + Parallel Old
-- –XX:+UseConcMarkSweepGC：ParNew + CMS + Serial Old
+- -XX:+UseSerialGC：Serial + Serial Old
+- -XX:+UseParNewGC：ParNew + Serial Old
+- -XX:+UseParallelGC：Parallel Scavenge + Serial Old
+- -XX:+UseParallelOldGC：Parallel Scavenge + Parallel Old
+- -XX:+UseConcMarkSweepGC：ParNew + CMS + Serial Old
 - -XX:+UseG1GC：G1
 
 
 ### 64位JVM 默认配置，以JDK 8为例
 
-
-命令`java -XX:+PrintFlagsFinal -version`或者`jmap -heap <pid>`可以查看默认配置。
-
-
-JVM堆最小为物理内存的 1/64；最大为物理内存的 1/4。可以使用`-Xms`和`-Xmx`指定初始和最大大小。年轻代默认比例为`-XX:NewRatio=2`，即占总堆的 1/3，Survivor空间比例为`-XX:SurvivorRatio=8`，即每个Survivor占Eden的 1/8，因为有两个，所以占年轻代的 1/10。
-
-JDK 8 默认垃圾收集器是ParallelOldGC，如果直接观察各区大小，计算会有出入，这是因为 Parallel Scavenge 默认打开AdaptiveSizePolicy，自适应调整各种参数，此时需要手动指定`-XX:SurvivorRatio=8`才能得到准确的结果。比如指定堆大小为270M，那么个区域大小如下：
+使用命令`java -XX:+PrintFlagsFinal -version`或者`jmap -heap <pid>`可以查看默认配置。
 
 
+JVM堆最小为物理内存的 1/64，64位至少2G，即最小32M；最大为物理内存的 1/4，如128G内存，默认JVM最大32G，可以使用`-Xms`和`-Xmx`指定初始和最大大小。年轻代默认比例为`NewRatio=2`，即占总堆的 1/3，可使用`-Xmn`指定大小，Survivor空间比例为`SurvivorRatio=8`，即每个Survivor占Eden的 1/8，因为有两个，所以占年轻代的 1/10。
 
-### GC roots的回收
+
+JDK 8 默认垃圾收集器是ParallelOldGC，其中Parallel Scavenge默认打开AdaptiveSizePolicy，自适应调整各种参数，默认的SurvivorRatio 配置需要手动指定才能生效。比如指定堆大小为270M，那么各区域大小如下：
+
+
+
+### 永久代, Permanent Generation
+
+JVM 中方法区的实现，不同版本之间存储内容存在差别：
+
+- JDK 6：类元数据、类静态变量、intern字符串
+- JDK 7：将intern字符串移到堆中
+- JDK 8：移除永久代，新增一个元空间存储类元数据，将类静态变量和intern字符串移到堆中
+
+
+永久代逻辑上是堆的组成部分，64位JVM默认大小为82M，但最大大小难以估计，因为程序里面有多少类，有多少方法以及常量池大小都很难估算，并且永久代垃圾收集与老年代绑定，任一区域满了都会触发Full GC，所以对永久代的调优很困难。在JDK 8中，分离类元数据到元空间并放在本地内存中，
+
+
+### JDK 8 GC Cause
 
 
 
@@ -103,4 +106,3 @@ JDK 8 默认垃圾收集器是ParallelOldGC，如果直接观察各区大小，�
 - [JEP 122: Remove the Permanent Generation](http://openjdk.java.net/jeps/122)
 - [Java HotSpot VM Options](http://www.oracle.com/technetwork/java/javase/tech/vmoptions-jsp-140102.html)
 - [String.intern in Java 6, 7 and 8 – string pooling](http://java-performance.info/string-intern-in-java-6-7-8/)
- 
